<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:wheel="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SampleProgressViewActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/button_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/spinners"
            android:layout_alignRight="@+id/spinners"
            android:layout_alignParentTop="true"
            android:text="@string/about" />

        <TextView
            android:id="@+id/main_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_about"
            android:layout_marginTop="16dp"
            android:text="@string/main_text"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/spinners"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/main_text"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/option_bar_color" />

                <Spinner
                    android:id="@+id/spinner_options_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/progress_color_options" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/option_wheel_color" />

                <Spinner
                    android:id="@+id/spinner_options_rim_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/wheel_color_options" />
            </LinearLayout>
        </LinearLayout>

        <com.simorgh.materialishprogress.ProgressWheel
            android:id="@+id/progress_wheel"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_below="@id/spinners"
            android:layout_centerHorizontal="true"
            wheel:matProg_barColor="#5588FF"
            wheel:matProg_progressIndeterminate="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/progress_wheel"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/option_progress" />

            <Spinner
                android:id="@+id/spinner_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:entries="@array/progress_value_options"
                android:gravity="center_horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp"
                        android:text="@string/interpolated" />

                    <com.simorgh.materialishprogress.ProgressWheel
                        android:id="@+id/interpolated"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp"
                        wheel:matProg_barColor="#5588FF"
                        wheel:matProg_fillRadius="false" />

                    <TextView
                        android:id="@+id/interpolatedValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp"
                        android:text="@string/linear" />

                    <com.simorgh.materialishprogress.ProgressWheel
                        android:id="@+id/linear"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp"
                        wheel:matProg_barColor="#5588FF"
                        wheel:matProg_fillRadius="false"
                        wheel:matProg_linearProgress="true" />

                    <TextView
                        android:id="@+id/linearValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

</ScrollView>